--- a/teaching.html
+++ b/teaching.html
@@ -121,8 +121,8 @@ description: Teaching philosophy and courses of Jaewook Lee
 
     <!-- ===== Right-side Image ===== -->
     <div class="image-container">
-      <img src="/assets/images/etc/image_learningpng"
-           alt="Teaching illustration: interactive and hands-on learning — AI generated">
+      <img src="/assets/images/etc/image_learning.png"
+           alt="Teaching illustration: interactive and hands-on learning — free stock image">
     </div>
   </div>
 
