research and teaching

--- a/research.html
+++ b/research.html
@@ -132,11 +132,11 @@ description: Research overview of Jaewook Lee
 
   <div class="image-container">
     <img src="/assets/images/etc/research_image-min.png"
-         alt="Research illustration: Labor Migration, Automation, and Climate Change — AI Generated Image, Dutch Golden Age style">
+         alt="Research illustration: Labor Migration, Automation, and Climate Change">
     <p class="image-caption">
-      <em>AI-generated image, </em> ChatGPT 5 <br>
+      <em> AI-generated image, </em> ChatGPT 5 <br>
         <details>
-         <summary>— Prompt</summary>
+         <summary> Prompt </summary>
         "Draw a Dutch painting in the 17th-century style, <br>
         showing people facing challenges from labor migration (left), <br>
         automation (center), and climate change (right), <br>
