Update course title in teaching.html

--- a/teaching.html
+++ b/teaching.html
@@ -175,7 +175,7 @@ description: Teaching philosophy and courses of Jaewook Lee
       <li>Comparative Political Economy</li>
       <li>International Political Economy</li>
       <li>Comparative Public Policy</li>
-      <li>Political Economy of Economic Transformations: Migration, Technology, and Climate Change</li>
+      <li>Political Economy of Structural Transformations: Migration, Technology, and Climate Change</li>
       <li>Research Methods: Thinking Like a Political Scientist</li>
     </ul>
     <p class="courses-note">
