--- a/research.html
+++ b/research.html
@@ -248,7 +248,7 @@ description: Research overview of Jaewook Lee
 
     <article class="paper">
       <h3>
-        Computing the Climate: How AI Infrastructure Shapes Public Support for Green Policy and AI Governance
+        The Climate Costs of Computing: Data Centers and the Politics of Environmental Footprint
         <br>
         <small>
           <a href="https://connect.apsanet.org/centennialcenter/summer-centennial-center-research-grants/" target="_blank">
@@ -258,7 +258,7 @@ description: Research overview of Jaewook Lee
       </h3>
       <p>
         This project examines how the rapid growth of AI data centers—major consumers of electricity and water—reshapes public attitudes toward climate policy and AI regulation.
-        Combining regional data across Europe with original surveys, it identifies when citizens demand greener technologies or tighter governance over compute infrastructure.
+        Combining regional data across the US and Europe with original surveys, it identifies when citizens demand greener technologies or tighter governance over compute infrastructure.
       </p>
     </article>
 
